--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -44,7 +44,11 @@
 }
 .form-group{
     padding: 10px;
-    /* margin-top: 20px; */
+}
+.form-group label{
+    padding: 5px;
+    font-weight: 900px;
+    
 }
 
 /* table  */
